updated create and delete user tests