@@ -1,12 +1,10 @@
 package data;
 
 import context.ContextStore;
-import models.responses.Book;
-import models.responses.BookStore;
-import models.responses.Message;
-import models.responses.User;
+import models.responses.*;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class TestData {
     //Books
@@ -24,5 +22,6 @@ public class TestData {
     public static final Message ERROR_UNAUTHORIZED_USER = new Message(1200, "User not authorized!");
     //User's information
     public static final User MAIN_USER_INF = new User(ContextStore.get("main-user-id"), ContextStore.get("main-user"), Arrays.asList(BOOK2, BOOK3, BOOK1));
-    public static final User EMPTY_USER_INF = new User(ContextStore.get("empty-user-id"), ContextStore.get("empty-user"), Arrays.asList());
+    public static final User EMPTY_USER_INF = new User(ContextStore.get("empty-user-id"), ContextStore.get("empty-user"), List.of());
+    public static final UserWithTypo NEW_USER_INF = new UserWithTypo(ContextStore.get("newUserId"), ContextStore.get("newUsername"), List.of());
 }
